--- a/sandbox/public/stylesheets/index_style01.css
+++ b/sandbox/public/stylesheets/index_style01.css
@@ -33,14 +33,14 @@ background-color:  #f1f1f1;
 }
 
 
-#usrElitMDL .input-group span {
+#usrElitMDL .input-group span, #cursoEliMDL .input-group span {
 	text-indent: 30px;
 	text-decoration: underline;
 	font-style: oblique;
 	font-weight: bold;
 }
 
-#usrElitMDL .input-group p {
+#usrElitMDL .input-group p, #cursoEliMDL .input-group p {
 	text-indent: 70px;
 	font-weight: bold;
 }
