--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -219,7 +219,7 @@
 						    <br>						    
 						    <p id="eliMsj"></p>
 						    <div class="form-group">
-						    	<button type="btn" id="btnElim" class="button block-center" >Eliminar</button>
+						    	<button type="btn" id="btnElim" class="btn" >Eliminar</button>
 						    </div>
 					    </div>
 					</div>
@@ -228,7 +228,7 @@
 			<!-- Fin Modal Usr Eliminar-->
 
 
-			<!-- Modal Usr Curso-->
+			<!-- Modal Curso-->
 			<div class="modal fade" id="cursoMDL" role="dialog">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -257,8 +257,40 @@
 					</div>
 				</div>		
 			</div>
-			<!-- Fin Modal Usr Curso-->
+			<!-- Fin Modal Curso-->
 
+
+			<!-- Modal Curso Eliminar-->
+			<div class="modal fade" id="cursoEliMDL" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+					    <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Eliminar Curso </h4>
+					    </div>
+					    <div class="modal-body">
+
+					    	<p> Seguro desea eliminar el curso...?</p>
+					    	
+					        <div class="input-group">
+					        	<span> Paralelo: </span><p id="eli_paral"></p>
+						    </div>
+						    <div class="input-group">
+						    	<span> Profesor: </span><p id="eli_prof"></p>
+						    </div>
+						    <p id="eliCrs_id"></p>
+						    <br>						    
+						    <p id="eliCrsMsj"></p>
+						    <div class="form-group">
+						    	<button type="btn" id="btnElim" class="btn" >Eliminar</button>
+						    </div>
+					    </div>
+					</div>
+				</div>		
+			</div>
+			<!-- Fin Modal Curso Eliminar-->
+
+			
 			<footer>
 				<div id="sub-footer">
 					<div class="container2">
