--- a/sandbox/views/sandbox_estd2.ejs
+++ b/sandbox/views/sandbox_estd2.ejs
@@ -73,10 +73,10 @@
 							<h4 class="modal-title" id="myModalLabel">Alerta</h4>
 						  </div>
 						  <div class="modal-body">
-							<p> Envio exitoso </p>
+							<p id="pMensaje" class="text-center">  </p>
 						  </div>
 						  <div class="modal-footer">
-							<a href="/sandbox_est/"><button type="button" class="btn btn-primary">Ok</button></a>
+							<button type="button" class="btn btn-primary" id="btnOK" data-dismiss="modal">Ok</button>
 						  </div>
 						</div>
 					  </div>
