--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -54,8 +54,9 @@
 							</ul><br>
 					</div>
 					<div class="col-sm-9" id="cuer">
-					
-
+						<div class="panel-group" id="accordion">
+						
+						</div>
 					</div> 
 				</div>
 			</div>
