quitar estudiantes de curso

--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -299,13 +299,11 @@
 					<div class="modal-content">
 					    <div class="modal-header">
 					        <button type="button" class="close" data-dismiss="modal">&times;</button>
-					        <h4><span class="glyphicon glyphicon-list-alt"></span> Agregar Estudiante </h4>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Estudiantes del paralelo </h4>
 					    </div>
 					    <div class="modal-body">
-						    <p id="estudCursoid"></p>
-						    <p id="estudSN_id" visible="false"></p>							    						    
-						    <br>
-						    <div id="EstxParalTbl"></div>
+						    <p id="estQuitaPar_id" visible="false"></p>	
+						    <div id="EstParalTbl"></div>
 						    <p id="saveMsj"></p>						    						
 					    </div>
 					</div>
