--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -29,9 +29,10 @@
 					<div class="tab-content">
 					    <div id="seccion1" class="tab-pane fade in active">
 					    		<br>
-					        	<button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#modalEjerc">Nuevo</button>
+					        	<button type="button" class="btn btn-default btn-sm" id ="btnnew" data-toggle="modal" data-target="#modalEjerc">Nuevo</button>
 					        	<br>
 								<div class="panel-group col-xs-7 col-md-8" id="panelColl">
+
 								</div>
 						    <!-- </div> -->
 					    </div>
@@ -85,6 +86,7 @@
 						    <p id="errorMsj"></p>
 						    <div class="form-group">
 						    	<button id="btnAdd" class="btn">Agregar</button>
+						    	<button id="btnEdit" class="btn">Editar</button>
 						    </div>
 					    </div>
 					</div>
