--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -94,6 +94,26 @@
 			</div>
 			<!-- Fin Modal -->
 
+			<div id="modalElim" class="modal fade" role="dialog">
+			  <div class="modal-dialog">
+
+			    <!-- Modal content-->
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal">&times;</button>
+			        <h4 class="modal-title" style="color:red;">Peligro</h4>
+			      </div>
+			      <div class="modal-body">
+			        <h5>¿Desea eliminar el ejercicio? </h5>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" id="btnDelete" class="btn btn-danger" data-dismiss="modal">SI</button>
+			      </div>
+			    </div>
+
+			  </div>
+			</div>
+
 			<footer>
 				<div id="sub-footer">
 					<div class="container2">
