--- a/sandbox/views/perfil.ejs
+++ b/sandbox/views/perfil.ejs
@@ -24,23 +24,15 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Fundamentos de Programación">
+							<a class="navbar-brand" href="/sandbox_est"><img src="/img/logo.png" alt="Fundamentos de Programación">
         					</a>
 						</div>
-
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/index">Administracion</a></li>
-								<!--Copiando para las demas vistas-->
-								<li class="dropdown active"> 
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li class="active"><a href="#">Reporte por Fecha</a></li>
-										<li><a href="curso">Reporte por Ejercicios</a></li>
-									</ul>
-								</li> 
+								<li  class="active"><a href="/api/perfil/vista">Perfil</a></li>
 							</ul>
 						</div>
+					</div>
 
 					</div>
 				</nav>
@@ -63,7 +55,7 @@
 						    </div>
 							
 							<div class="boton">
-								<button type="button" class="btn btn-default btn-sm" id="signout">Cerrar Sesión</button>
+								<a href="/logout"><button type="button" class="btn btn-default btn-sm" id="signout">Cerrar Sesión</button></a>
 							</div>	
 							<p id="errorMsj"></p>
 
