--- a/sandbox/views/sandbox_estd2.ejs
+++ b/sandbox/views/sandbox_estd2.ejs
@@ -22,31 +22,14 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
+							<a class="navbar-brand" href="/sandbox_est"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li> <a href="index.html">Inicio</a> </li>
-								<li class="dropdown active"> 
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Curso<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="curso.html">Información</a></li>
-										<li><a href="week2week.html">Planificación</a></li>
-										<li><a href="#" id="sandbox">Sandbox</a></li>
-										<li><a href="Proyecto.html">Proyectos</a></li>
-									</ul>
-								</li>
-								<li> <a href="ayudantias.html">Ayudantias</a> </li>
-								<li> <a href="equipo.html">Equipo</a> </li>
-								<li id="perfil"></li>						
-								<li> 
-									<a href="#" class="login" data-toggle="modal" data-target="#myModal">
-								        <span id="icon" class="glyphicon glyphicon-user"></span>
-								        <span id="texto"></span>
-								    </a>
-								</li>
+								<li  class="active"><a href="/api/perfil/vista">Perfil</a></li>
 							</ul>
 						</div>
+					</div>
 					</div>
 				</nav>
 			</header>
