--- a/sandbox/views/cambiarpass.ejs
+++ b/sandbox/views/cambiarpass.ejs
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="es">
 
@@ -6,9 +6,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><%= title %></title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/stylesheets/styleSB.css">
-		
 	</head>
 
 	<body>
@@ -35,12 +34,6 @@
 								    </a>
 								</li>
 								<li> 
-									<a href="/cambiarpass">
-										<span id="icon" class="glyphicon glyphicon glyphicon-wrench"></span>
-										<span id="texto"></span>
-									</a>
-								</li>
-								<li> 
 									<a href="/logout">
 								        <span id="icon" class="glyphicon glyphicon-log-out"></span>
 								        <span id="texto"></span>
@@ -53,20 +46,21 @@
 			</header>
 			
 			<div class="container-fluid">
-				<div class="row content">
-					<div class="col-sm-3 sidenav">
-						<h4>Sandbox</h4>
-							<ul class="nav nav-pills nav-stacked" id="lis">
-								<li class="active" id="prin"><a href="#P">Principiante</a></li>
-								<li id="med"><a href="#I">Intermedio</a></li>
-								<li id="avaz"><a href="#P">Avanzado</a></li>
-							</ul><br>
-					</div>
+				<div class="row content">					
 					<div class="col-sm-9" id="cuer">
-						<div class="panel-group" id="accordion">
-						
-						</div>
-					</div> 
+						<form action="/cambiarpass" method="POST" id="formCambiar">
+							<div class="form-group">
+								<label for="password">Contrase&ntilde;a:</label>
+								<input type="password" placeholder="Ingrese contrasena" name="password" id="password" required class="form-control">
+							</div>
+							<div class="form-group">
+								<label for="pconfirm">Confirme:</label>
+								<input type="password" placeholder="Confirme contrasena" name="pconfirm" id="pconfirm" required class="form-control">
+							</dir>
+							<input type="submit">
+						</form>
+					</div>					
+					
 				</div>
 			</div>
 			
@@ -86,8 +80,9 @@
 			</footer>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		<script src="/javaScript/sdEstudprincipal.js" type="text/javascript"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="/javaScript/cambiarpass.js" type="text/javascript"></script>
+
 	</body>
 
 </html>
