--- a/sandbox/views/perfil.ejs
+++ b/sandbox/views/perfil.ejs
@@ -24,24 +24,25 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#"><img src="/img/logo.png" alt="Fundamentos de Programación">
-        					</a>
+							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
 						</div>
-
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="/index">Administracion</a></li>
-								<!--Copiando para las demas vistas-->
-								<li class="dropdown active"> 
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li class="active"><a href="#">Reporte por Fecha</a></li>
-										<li><a href="curso">Reporte por Ejercicios</a></li>
-									</ul>
-								</li> 
+								<li> <a href="/index">Inicio</a> </li>											
+								<li> 
+									<a href="/api/perfil/vista">
+								        <span id="icon" class="glyphicon glyphicon-user"></span>
+								        <span id="texto"></span>
+								    </a>
+								</li>
+								<li> 
+									<a href="/logout">
+								        <span id="icon" class="glyphicon glyphicon-log-out"></span>
+								        <span id="texto"></span>
+								    </a>
+								</li>
 							</ul>
 						</div>
-
 					</div>
 				</nav>
 			</header>
