--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -24,7 +24,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="/sandbox_est">
-							<img src="/img/logo.png" alt="Fundamentos de Programación">
+							<img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
 							</a>
 						</div>
 					<div class="collapse navbar-collapse" id="navbar-1">
