--- a/sandbox/views/sandbox_estd2.ejs
+++ b/sandbox/views/sandbox_estd2.ejs
@@ -22,14 +22,15 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/sandbox_est"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
+							<a class="navbar-brand" href="/sandbox_est">
+							<img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
+							</a>
 						</div>
-						<div class="collapse navbar-collapse" id="navbar-1">
+					<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li  class="active"><a href="/api/perfil/vista">Perfil</a></li>
 							</ul>
 						</div>
-					</div>
 					</div>
 				</nav>
 			</header>
