administrador reset contrasena

--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -65,6 +65,8 @@
 					        	Nuevo
 					        </button>
 					        <br><br>
+					        <p id="msjSec1"></p>
+					        <br>
 
 					        <div id="usuariosTabla"></div>
 								
@@ -76,6 +78,8 @@
 					        	Nuevo
 					        </button>
 					        <br><br>
+					        <p id="msjSec2"></p>
+					        <br>
 
 					        <div id="cursosTabla"></div>
 
@@ -139,7 +143,8 @@
 								    <input id="pass" type="password" class="form-control input-sm" name="pass" placeholder="Contrasena">
 							    </div>
 							    <br>
-							    <p id="saveMsj"></p>
+						        <p id="msjMDL"></p>
+						        <br>
 							    <div class="form-group">
 							    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
 							    </div>
@@ -191,7 +196,9 @@
 						    <br>
 						    <p id="edit_rol" visible="false"></p>
 						    <p id="edit_id" visible="false"></p>
-						    <p id="actMsj"></p>
+						    <br>
+					        <p id="msjMDL"></p>
+					        <br>
 						    <div class="form-group">
 						    	<button type="btn" id="btnAct" class="btn" >Actualizar</button>
 						    </div>
@@ -221,8 +228,9 @@
 						    	<span> Correo: </span><p id="eli_correo"></p>
 						    </div>
 						    <p id="eli_id" visible="false"></p>
-						    <br>						    
-						    <p id="eliMsj"></p>
+						    <br>
+					        <p id="msjMDL"></p>
+					        <br>
 						    <div class="form-group">
 						    	<button type="btn" id="btnElim" class="btn" >Eliminar</button>
 						    </div>
@@ -302,7 +310,7 @@
 					        <h4><span class="glyphicon glyphicon-list-alt"></span> Estudiantes del paralelo </h4>
 					    </div>
 					    <div class="modal-body">
-						    <p id="estQuitaPar_id" visible="false"></p>	
+						    <!-- <p id="estQuitaPar_id" visible="false"></p> -->	
 						    <div id="EstParalTbl"></div>
 						    <p id="saveMsj"></p>						    						
 					    </div>
