--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -27,8 +27,8 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="index.html">
-								<img src="img/logo.png" alt="Fundamentos de Programación">
+							<a class="navbar-brand" href="/index">
+								<img src="img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
         					</a>
 						</div>
 
