--- a/sandbox/views/curso_reporte.ejs
+++ b/sandbox/views/curso_reporte.ejs
@@ -42,6 +42,8 @@
 										<li class="active"><a href="#">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
+								<li><a href="/logout">Cerrar Sesion</a></li>
+								
 							</ul>
 						</div>
 
