--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -29,6 +29,7 @@
 						</div>
 					<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
+								<li  class="active"><a href="#">Sandbox</a></li>
 								<li  class="active"><a href="/api/perfil/vista">Perfil</a></li>
 							</ul>
 						</div>
