--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -41,7 +41,8 @@
 										<li><a href="reporte/fecha">Reporte por Fecha</a></li>
 										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
 									</ul>
-								</li>	
+								</li>
+								<li><a href="/logout">Cerrar Sesion</a></li>
 							</ul>
 						</div>
 
