--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -43,6 +43,7 @@
 										<li><a href="curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
+								<li><a href="/logout">Cerrar Sesion</a></li>
 							</ul>
 						</div>
 
