--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -33,6 +33,7 @@
 						</div>
 					<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
+								<li  class="active"><a href="#">Sandbox</a></li>
 								<li  class="active"><a href="/logout">Cerrar Sesion</a></li>
 							</ul>
 						</div>
