--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -27,7 +27,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="index.html">
+							<a class="navbar-brand" href="/index">
 								<img src="img/logo.png" alt="Fundamentos de Programación">
         					</a>
 						</div>
