logout en vistas de reporte e index

--- a/sandbox/views/curso_reporte.ejs
+++ b/sandbox/views/curso_reporte.ejs
@@ -42,6 +42,12 @@
 										<li class="active"><a href="#">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
+								<li> 
+									<a href="/logout">
+								        <span id="icon" class="glyphicon glyphicon-log-out"></span>
+								        <span id="texto"> LogOut </span>
+								    </a>
+								</li>
 							</ul>
 						</div>
 
