--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -28,7 +28,7 @@
 								<span class="icon-bar"></span>
 							</button>
 							<a class="navbar-brand" href="index.html">
-								<img src="img/logo.png" alt="Fundamentos de Programación">
+								<img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
         					</a>
 						</div>
 
@@ -42,6 +42,12 @@
 										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>	
+								<li> 
+									<a href="/logout">
+								        <span id="icon" class="glyphicon glyphicon-log-out"></span>
+								        <span id="texto"> LogOut </span>
+								    </a>
+								</li>
 							</ul>
 						</div>
 
