--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -43,6 +43,12 @@
 										<li><a href="curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
+								<li> 
+									<a href="/logout">
+								        <span id="icon" class="glyphicon glyphicon-log-out"></span>
+								        <span id="texto"> LogOut </span>
+								    </a>
+								</li>
 							</ul>
 						</div>
 
