--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -33,19 +33,19 @@
 						</div>
 
 					<div class="collapse navbar-collapse" id="navbar-1">
-							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Sandbox</a></li>
-								<ul class="nav navbar-nav navbar-right">								
-									<li class="dropdown active"> 
-										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
-										<ul class="dropdown-menu">
-											<li><a href="reporte/fecha">Reporte por Fecha</a></li>
-											<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
-										</ul>
-									</li>
-								</ul>
-								<li  class="active"><a href="/logout">Cerrar Sesion</a></li>
-						</div>
+						<ul class="nav navbar-nav navbar-right">
+							<li class="active"><a href="#">Sandbox</a></li>
+															
+								<li class="dropdown active"> 
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="reporte/fecha">Reporte por Fecha</a></li>
+										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
+									</ul>
+								</li>
+							
+							<li><a href="/logout">Cerrar Sesion</a></li>
+						</ul>
 					</div>
 				</nav>
 			</header>			
