--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -305,7 +305,7 @@
 					<div class="modal-content">
 					    <div class="modal-header">
 					        <button type="button" class="close" data-dismiss="modal">&times;</button>
-					        <h4><span class="glyphicon glyphicon-list-alt"></span> Agregar Estudiante </h4>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Estudiantes del paralelo </h4>
 					    </div>
 					    <div class="modal-body">
 						    <p id="estudCursoid"></p>
