--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -23,7 +23,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
+							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"></a><h5>Fundamentos de Programación</h5>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">D
