--- a/sandbox/views/cambiarpass.ejs
+++ b/sandbox/views/cambiarpass.ejs
@@ -22,7 +22,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"></a><h5>Fundamentos de Programación</h5>
+							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5></a>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
