--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -23,13 +23,11 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"></a><h5>Fundamentos de Programación</h5>
+							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5></a>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">D
-								<li  class="active"><a href="#">Sandbox</a></li>
-								<li  class="active"><a href="/api/perfil/vista">Perfil</a></li>
-								<li> <a href="/index">Inicio</a> </li>											
+								<li  class="active"><a href="#">Sandbox</a></li>											
 								<li> 
 									<a href="/api/perfil/vista">
 								        <span id="icon" class="glyphicon glyphicon-user"></span>
