--- a/sandbox/views/cambiarpass.ejs
+++ b/sandbox/views/cambiarpass.ejs
@@ -26,12 +26,18 @@
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li> <a href="/index">Inicio</a> </li>											
+								<li  class="active"><a href="/sandbox_est">Sandbox</a></li>											
 								<li> 
 									<a href="/api/perfil/vista">
 								        <span id="icon" class="glyphicon glyphicon-user"></span>
 								        <span id="texto"></span>
 								    </a>
+								</li>
+								<li> 
+									<a href="#">
+										<span id="icon" class="glyphicon glyphicon glyphicon-wrench"></span>
+										<span id="texto"></span>
+									</a>
 								</li>
 								<li> 
 									<a href="/logout">
