--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -26,7 +26,7 @@
 							<a class="navbar-brand" href="/index"><img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5></a>
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
-							<ul class="nav navbar-nav navbar-right">D
+							<ul class="nav navbar-nav navbar-right">
 								<li  class="active"><a href="#">Sandbox</a></li>											
 								<li> 
 									<a href="/api/perfil/vista">
