--- a/sandbox/views/perfil.ejs
+++ b/sandbox/views/perfil.ejs
@@ -30,7 +30,7 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li  class="active"><a href="#">Sandbox</a></li>											
 								<li> 
-									<a href="/api/perfil/vista">
+									<a href="#">
 								        <span id="icon" class="glyphicon glyphicon-user"></span>
 								        <span id="texto"></span>
 								    </a>
@@ -68,10 +68,7 @@
 						      		<div class="panel-footer" id="datatotal"></div>
 						    	</div>							    
 						    </div>
-							
-							<div class="boton">
-								<button type="button" class="btn btn-default btn-sm" id="signout">Cerrar Sesión</button>
-							</div>	
+								
 							<p id="errorMsj"></p>
 
 					    </div>
