--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -27,7 +27,7 @@
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Sandbox</a></li>											
+								<li  class="active"><a href="/sandbox_est">Sandbox</a></li>											
 								<li> 
 									<a href="/api/perfil/vista">
 								        <span id="icon" class="glyphicon glyphicon-user"></span>
