--- a/sandbox/views/perfil.ejs
+++ b/sandbox/views/perfil.ejs
@@ -28,7 +28,7 @@
 						</div>
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Sandbox</a></li>											
+								<li  class="active"><a href="/sandbox_est">Sandbox</a></li>											
 								<li> 
 									<a href="#">
 								        <span id="icon" class="glyphicon glyphicon-user"></span>
@@ -68,9 +68,6 @@
 						      		<div class="panel-footer" id="datatotal"></div>
 						    	</div>							    
 						    </div>
-								
-							<p id="errorMsj"></p>
-
 					    </div>
 					</div>
 				</div>
