--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -28,7 +28,7 @@
 							</button>
 							<!-- <a href="#" class="navbar-brand">Fundamentos de Programación</a> -->
 							<a class="navbar-brand" href="/index">
-							<img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
+							<img src="#" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
 							</a>
 						</div>
 
