--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -27,8 +27,8 @@
 								<span class="icon-bar"></span>
 							</button>
 							<!-- <a href="#" class="navbar-brand">Fundamentos de Programación</a> -->
-							<a class="navbar-brand" href="/index">
-							<img src="#" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
+							<a class="navbar-brand" href="#">
+							<img src="/img/logo.png" alt="Fundamentos de Programación"><h5>Fundamentos de Programación</h5>
 							</a>
 						</div>
 
@@ -42,7 +42,7 @@
 									<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
 								</ul>
 							</li>
-							<li><a href="/logout">Cerrar Sesion</a></li>
+							<li><a href="/logout"> <span id="icon" class="glyphicon glyphicon-log-out"></span>  Cerrar Sesion</a></li>
 						</ul>
 					</div>
 				</nav>
