--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -69,9 +69,10 @@
 					        <br>
 					        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#usuarioMDL">
 					        	Nuevo
-					        </button>
-					        <br><br>
-
+					        </button>					        
+					        <br><br>					        
+							<p id="msjSec1"></p>
+							<br>
 					        <div id="usuariosTabla"></div>
 								
 					    </div>
@@ -145,7 +146,7 @@
 								    <input id="pass" type="password" class="form-control input-sm" name="pass" placeholder="Contrasena">
 							    </div>
 							    <br>
-							    <p id="saveMsj"></p>
+							    <p id="errMsj"></p>
 							    <div class="form-group">
 							    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
 							    </div>
@@ -197,7 +198,7 @@
 						    <br>
 						    <p id="edit_rol" visible="false"></p>
 						    <p id="edit_id" visible="false"></p>
-						    <p id="actMsj"></p>
+						    <p id="errMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnAct" class="btn" >Actualizar</button>
 						    </div>
@@ -228,7 +229,7 @@
 						    </div>
 						    <p id="eli_id" visible="false"></p>
 						    <br>						    
-						    <p id="eliMsj"></p>
+						    <p id="errMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnElim" class="btn" >Eliminar</button>
 						    </div>
