manejo de errores

--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -82,8 +82,9 @@
 					        <button type="button" class="btn btn-default btn-sm" onclick="cargaProf()" data-toggle="modal" data-target="#cursoMDL">
 					        	Nuevo
 					        </button>
-					        <br><br>
-
+					        <br><br>					        
+							<p id="msjSec2"></p>
+							<br>
 					        <div id="cursosTabla"></div>
 
 					    </div>
@@ -268,7 +269,7 @@
 						    <p id="profCurso_id" visible="false"></p>						    						    
 						    <br>
 						    <div id="profTabla"></div>
-						    <p id="saveMsj"></p>
+						    <p id="errMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
 						    </div>							
@@ -292,7 +293,7 @@
 						    <p id="estudSN_id" visible="false"></p>							    						    
 						    <br>
 						    <div id="EstTabla"></div>
-						    <p id="saveMsj"></p>						    						
+						    <p id="errMsj"></p>						    						
 					    </div>
 					</div>
 				</div>		
@@ -313,7 +314,7 @@
 						    <p id="estudSN_id" visible="false"></p>							    						    
 						    <br>
 						    <div id="EstxParalTbl"></div>
-						    <p id="saveMsj"></p>						    						
+						    <p id="errMsj"></p>						    						
 					    </div>
 					</div>
 				</div>		
@@ -343,7 +344,7 @@
 						    <p id="profEditCrs_id" visible="false"></p>						    						    
 						    <br>
 						    <div id="profEditTabla"></div>
-						    <p id="saveMsj"></p>
+						    <p id="errMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnAct" class="btn">Actualizar</button>
 						    </div>							
@@ -374,7 +375,7 @@
 						    </div>
 						    <p id="eliCrs_id"></p>
 						    <br>						    
-						    <p id="eliCrsMsj"></p>
+						    <p id="errMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnElim" class="btn" >Eliminar</button>
 						    </div>
