--- a/views/sandbox_prof.ejs
+++ b/views/sandbox_prof.ejs
@@ -42,6 +42,12 @@
 									<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
 								</ul>
 							</li>
+							<li> 
+								<a href="/cambiarpass">
+									<span id="icon" class="glyphicon glyphicon glyphicon-wrench"></span>
+									<span id="texto"></span>
+								</a>
+							</li>
 							<li><a href="/logout"> <span id="icon" class="glyphicon glyphicon-log-out"></span>  Cerrar Sesion</a></li>
 						</ul>
 					</div>
